--- a/002-HTML综合练习/demo/index.html
+++ b/002-HTML综合练习/demo/index.html
@@ -92,8 +92,6 @@
 
         </div>
     </div>
-    
-
 </div>
 
 
@@ -185,7 +183,7 @@
                     <a href="#" class="image">
                         <img src="images/new-products_01.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
                         <span class="tag">2色可选</span>
-                        <img src="images/new-products_01_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                        <img src="images/new-products_01_02.jpg" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
                     </a>
                     <div class="info">
                         <p class="attrs">
@@ -193,7 +191,7 @@
                             <span class="attr">加价购</span>
                             <span class="attr app-special">app特惠</span>
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                             <a href="#" class="brand-name">新秀丽制造商</a>
@@ -203,13 +201,13 @@
                 <div class="product">
                     <a href="#" class="image">
                         <img src="images/new-products_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
-                        <img src="images/new-products_02_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                        <img src="images/new-products_02_02.jpg" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
                     </a>
                     <div class="info">
                         <p class="attrs">
                             <span class="attr">加价购</span>
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                             <a href="#" class="brand-name">新秀丽制造商</a>
@@ -220,7 +218,7 @@
                     <a href="#" class="image">
                         <img src="images/new-products_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
                         <span class="tag">日本制造</span>
-                        <img src="images/new-products_03_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                        <img src="images/new-products_03_02.jpg" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
                     </a>
                     <div class="info">
                         <p class="attrs">
@@ -228,7 +226,7 @@
                             <span class="attr">加价购</span>
                             <span class="attr app-special">app特惠</span>
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                         </p>
@@ -238,13 +236,13 @@
                     <a href="#" class="image">
                         <img src="images/new-products_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
                         <span class="tag">6色可选</span>
-                        <img src="images/new-products_04_02.jpg"alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
+                        <img src="images/new-products_04_02.jpg" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱" class="cover">
                     </a>
                     <div class="info">
                         <p class="attrs">
 
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                         </p>
@@ -278,7 +276,7 @@
             <div class="content clear-fix">
                 <div class="product large img-scale">
                     <a href="#" class="image">
-                        <img src="images/new-products_01.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <img src="images/popular_01.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
                         <span class="tag">2色可选</span>
                     </a>
                     <div class="info">
@@ -287,23 +285,22 @@
                             <span class="attr">加价购</span>
                             <span class="attr app-special">app特惠</span>
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
-                            <a href="#" class="brand-name">新秀丽制造商</a>
                         </p>
                     </div>
                 </div>
                 <div class="product img-scale">
                     <a href="#" class="image">
-                        <img src="images/new-products_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <img src="images/popular_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
 
                     </a>
                     <div class="info">
                         <p class="attrs">
                             <span class="attr">加价购</span>
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                             <a href="#" class="brand-name">新秀丽制造商</a>
@@ -312,7 +309,56 @@
                 </div>
                 <div class="product img-scale">
                     <a href="#" class="image">
-                        <img src="images/new-products_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <img src="images/popular_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr hot">爆品</span>
+                            <span class="attr">加价购</span>
+                            <span class="attr app-special">app特惠</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/popular_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <span class="tag">6色可选</span>
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+
+                        </p>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/popular_05.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+
+                    </a>
+                    <div class="info">
+                        <p class="attrs">
+                            <span class="attr">加价购</span>
+                        </p>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <p class="price">
+                            <span class="price-value">289元</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="product img-scale">
+                    <a href="#" class="image">
+                        <img src="images/popular_06.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
                         <span class="tag">日本制造</span>
 
                     </a>
@@ -322,7 +368,7 @@
                             <span class="attr">加价购</span>
                             <span class="attr app-special">app特惠</span>
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                         </p>
@@ -330,7 +376,7 @@
                 </div>
                 <div class="product img-scale">
                     <a href="#" class="image">
-                        <img src="images/new-products_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
+                        <img src="images/popular_07.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
                         <span class="tag">6色可选</span>
 
                     </a>
@@ -338,57 +384,7 @@
                         <p class="attrs">
 
                         </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
-                        <p class="price">
-                            <span class="price-value">289元</span>
-                        </p>
-                    </div>
-                </div>
-                <div class="product img-scale">
-                    <a href="#" class="image">
-                        <img src="images/new-products_02.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
-
-                    </a>
-                    <div class="info">
-                        <p class="attrs">
-                            <span class="attr">加价购</span>
-                        </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
-                        <p class="price">
-                            <span class="price-value">289元</span>
-                            <a href="#" class="brand-name">新秀丽制造商</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="product img-scale">
-                    <a href="#" class="image">
-                        <img src="images/new-products_03.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
-                        <span class="tag">日本制造</span>
-
-                    </a>
-                    <div class="info">
-                        <p class="attrs">
-                            <span class="attr hot">爆品</span>
-                            <span class="attr">加价购</span>
-                            <span class="attr app-special">app特惠</span>
-                        </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC "铝框" (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
-                        <p class="price">
-                            <span class="price-value">289元</span>
-                        </p>
-                    </div>
-                </div>
-                <div class="product img-scale">
-                    <a href="#" class="image">
-                        <img src="images/new-products_04.png" alt="24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱">
-                        <span class="tag">6色可选</span>
-
-                    </a>
-                    <div class="info">
-                        <p class="attrs">
-
-                        </p>
-                        <h3 class="name ellipsis"><a href="3">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
+                        <h3 class="name ellipsis"><a href="#">24寸 纯PC 铝框 (非全吕) 拉杆箱拉杆箱拉杆箱拉杆箱拉杆箱</a></h3>
                         <p class="price">
                             <span class="price-value">289元</span>
                         </p>
@@ -397,6 +393,64 @@
             </div>
 
         </div>
+    </div>
+
+    <!--限时购-->
+    <div class="limit">
+        <div class="row">
+            <div class="header clear-fix">
+                <div class="left">
+                    <h2 class="title"><a href="#">限时购</a></h2>
+
+                </div>
+
+                <div class="right">
+                    <span class="more"><a href="#">更多抢购 &gt;</a></span>
+                </div>
+            </div>
+
+            <div class="content clear-fix">
+                <a href="#" class="shop-time">
+                    <p class="title">14点到场</p>
+                    <span class="divider"></span>
+                    <p class="subtitle">距离结束还剩</p>
+                    <p class="detail-time">
+                        <span class="detail hour">02</span>
+                        <i class="semicolon">:</i>
+                        <span class="detail minute">04</span>
+                        <i class="semicolon">:</i>
+                        <span class="detail sec">18</span>
+                    </p>
+                    <span class="detail-all">查看全部 &gt;</span>
+                </a>
+
+                <div class="goods">
+                    <span class="progress-bar">
+                        <span class="value"> </span>
+                    </span>
+                </div>
+
+                <div class="goods">
+                    <span class="progress-bar">
+                        <span class="value"> </span>
+                    </span>
+                </div>
+
+                <div class="goods last">
+                    <span class="progress-bar">
+                        <span class="value"> </span>
+                    </span>
+                </div>
+
+                <div class="goods last">
+                    <span class="progress-bar">
+                        <span class="value"> </span>
+                    </span>
+                </div>
+
+            </div>
+        </div>
+
 
     </div>
 </div>
@@ -457,7 +511,9 @@
         // 消除行内级的空格
         removeSpace('.slider .page-list',
                     '.product .attrs',
-                     '.produc .price'   )
+                    '.produc .price',
+                    '.shop-time .detail-time'
+                    )
     })
 </script>
 </html>
