--- a/002-HTML综合练习/demo/test.html
+++ b/002-HTML综合练习/demo/test.html
@@ -7,35 +7,78 @@
 
     <style>
 
+        .b-box {
+            background-color: rgba(255,255,0,0.3);
+            margin: 50px;
+        }
+        .b-box:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
 
-        .box1 {
-            position: relative;
-            width: 300px;
+        .box{
+            float: left;
+            width: 150px;
             height: 100px;
-            background-color: #f00;
-            border: 10px solid #000;
+            border: 1px solid #000;
+        }
+        span {
+            background-color: green;
+            margin: 30px;
+            padding: 15px 0;
         }
 
-        .box2 {
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            margin: 10px;
-            margin-bottom: -10px;
-            background-color: orange;
+        .sp1 {
+            line-height: 40px;
         }
 
+        p {
+            margin:0;
+            padding:0;
+            background-color: pink;
+        }
+        strong  {
+            display: inline-block;
+            margin: 5px;
+            padding: 10px 0;
+            line-height: 35px;
+            background-color: #0f0;
+
+        }
+
+        input {
+            margin-top: 10px;
+            padding: 10px;
+        }
 
     </style>
 </head>
 <body>
 
-<div class="box1">
-    <div class="box2">
+<div class="b-box">
+    <div class="box">
+        <span class="sp1"> 我是span </span>
+        <p>我是p</p>
+    </div>
+    <div class="box">
+        <span> 我是span </span>
+        <p>我是p</p>
+    </div>
+
+    su
+
+    <div class="box">
+        <strong> wo shi strong</strong>
+        <p>我是p</p>
+    </div>
+
+    <div class="box">
+        <input type="text">
+        <p>我是p</p>
     </div>
 </div>
+
 </body>
 </html>
 
