--- a/002-HTML综合练习/demo/test.html
+++ b/002-HTML综合练习/demo/test.html
@@ -7,77 +7,19 @@
 
     <style>
 
-        .b-box {
-            background-color: rgba(255,255,0,0.3);
-            margin: 50px;
-        }
-        .b-box:after {
-            content: "";
-            display: block;
-            clear: both;
-        }
+        div {
+            height: 200px;
+            line-height: 200px;
+            color: red;
+            font-size:  0px;
+            border:   solid
 
-        .box{
-            float: left;
-            width: 150px;
-            height: 100px;
-            border: 1px solid #000;
-        }
-        span {
-            background-color: green;
-            margin: 30px;
-            padding: 15px 0;
-        }
-
-        .sp1 {
-            line-height: 40px;
-        }
-
-        p {
-            margin:0;
-            padding:0;
-            background-color: pink;
-        }
-        strong  {
-            display: inline-block;
-            margin: 5px;
-            padding: 10px 0;
-            line-height: 35px;
-            background-color: #0f0;
-
-        }
-
-        input {
-            margin-top: 10px;
-            padding: 10px;
         }
 
     </style>
 </head>
 <body>
-
-<div class="b-box">
-    <div class="box">
-        <span class="sp1"> 我是span </span>
-        <p>我是p</p>
-    </div>
-    <div class="box">
-        <span> 我是span </span>
-        <p>我是p</p>
-    </div>
-
-    su
-
-    <div class="box">
-        <strong> wo shi strong</strong>
-        <p>我是p</p>
-    </div>
-
-    <div class="box">
-        <input type="text">
-        <p>我是p</p>
-    </div>
-</div>
+ <div></div>
 
 </body>
 </html>
